--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,7 +1,6 @@
 <h1>Create Tweet</h1>
 <form action="/tweets/new" method="POST">
-  <textarea name="content" id="content" rows="4" cols="40">Enter tweet here...
-  </textarea>
+  <input type="text" name="content" id="content">
  <input type="submit" id="submit">
 
 </form>
