--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,7 @@
-index.erb
+"Welcome to Fwitter"
+<!-- create a view that will eventually link to both a login page and signup page.-->
+<form action="/tweets" action=POST>
+<a href="/login">Login page</a>
+<br><br>
+<a href="/signup">Signup page</a>
+</form>
