--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,1 +1,6 @@
-tweets.erb
+Welcome,
+<form action="/tweets" action=POST>
+<a href="/login">Login page</a>
+<br><br>
+<a href="/signup">Signup page</a>
+</form>
