--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,1 +1,4 @@
-create_tweet.erb
+<form action="/create_tweet" method="POST">
+  <b>Fweet</b> Create Fweet: <input type="text" name="content">
+  <input type="submit" value="submit">
+</form>
