--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,1 +1,16 @@
-login
+<h1>Login</h1>
+<br></br>
+
+<form action="/login" method="post">
+
+  <label for="username">Username: </label>
+  <input type="text" name="username" id="username">
+  <label for="password">Password: </label>
+  <input type="text" name="password" id="password">
+  <input type="submit" value="submit">
+
+</form>
+
+<br><br>
+
+<a href="/signup">Sign Up</a>
