--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,1 +1,10 @@
-edit tweet
+<h1>Hi, <%= @user.username %></h1>
+<h1>Edit Tweet</h1>
+
+<form action="/tweets/<%= @tweet.id %>" method="post">
+
+  <input id="hidden" type="hidden" name="_method" value="patch">
+  <textarea name="content" rows="10" cols="80" id="content" value="<%= @tweet.content %>"></textarea>
+  <input type="submit" value="submit">
+
+</form>
