--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,1 +1,11 @@
-show for tweet
+<h1>Username: <%= @user.username %> </h1>
+
+<p><%= @tweet.content %></p>
+
+<h4><a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a></h4>
+<br></br>
+
+<form action="/tweets/<%= @tweet.id %>/delete" method="post">
+  <input id="hidden" type="hidden" name="_method" value="delete">
+  <input type="submit" value="Delete Tweet">
+</form>
