--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,1 +1,12 @@
-show for user
+<h1><%= @user.username %> Fwitter</h1>
+
+<h3>Email: <%= @user.email %></h3>
+<br></br>
+
+<% @user.tweets.each do |tweet| %>
+  <p><a href="\tweets\<%= tweet.id %>"><%= tweet.content %></a></p>
+<% end  %>
+
+<br></br>
+
+<a href="/logout">Log Out</a>
