--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,4 @@
-"Welcome to Fwitter"
+<h1>Welcome to Fwitter</h1>
 <!-- create a view that will eventually link to both a login page and signup page.-->
 <br><br>
 <a href="/login">Login page</a>
