--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,1 +1,5 @@
-create_user.erb
+<form method="POST" action="/signup">
+  <input name="username" placeholder="username:" type="text">
+  <input name="password" placeholder="Password:" type="password">
+  <input type="submit" value="Sign Up">
+</form>
