--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,6 +1,7 @@
-Welcome,
+"Welcome,"
 <form action="/tweets" action=POST>
 <a href="/login">Login page</a>
 <br><br>
 <a href="/signup">Signup page</a>
+<input type="submit" value="Logout">
 </form>
