--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -3,5 +3,5 @@
   <input name="username" placeholder="username:" type="text">
 
   <input name="password" placeholder="Password:" type="password">
-  <input type="submit" value="Log In">
+  <input type="submit" value="submit">
 </form>
