--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,7 +1,8 @@
 "Welcome,"
 <form action="/tweets" action=POST>
 <a href="/login">Login page</a>
+<input type="submit" value="Login">
 <br><br>
 <a href="/signup">Signup page</a>
-<input type="submit" value="Logout">
+<input type="submit" value="Signup">
 </form>
