--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -1,2 +1,10 @@
 <p>Welcome, <%= @user.username%>!</p>
-<input type="submit" value="submit">
+<% @posts.each do |p| %>
+  <% if p[:user_id] == session[:id] %>
+  <br>
+    <a href="users/<%= p.keys[0] %>"><%= p.keys[0] %></a>: <a href="tweets/<%= p[:id] %>/edit"><%= p.values[0] %></a>
+  <% else %>
+  <br>
+    <a href="users/<%= p.keys[0] %>"><%= p.keys[0] %></a>: <%= p.values[0] %>
+  <% end %>
+<% end %>
