--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,4 +1,5 @@
-<form action="/create_tweet" method="POST">
-  <b>Fweet</b> Create Fweet: <input type="text" name="content">
+<form action="/tweets" method="POST">
+  <label for>Create Tweet: </label><input type="text" name="content">
+
   <input type="submit" value="submit">
 </form>
