--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,1 +1,3 @@
-show_tweet.erb
+<input type="submit" value="delete" id="delete">Delete Tweet</input>
+<%=  @tweets.id %>
+<a href="/edit_tweet">Edit Tweet</a>
