--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,3 +1,2 @@
-<input type="submit" value="delete" id="delete">Delete Tweet</input>
-<%=  @tweets.id %>
-<a href="/edit_tweet">Edit Tweet</a>
+<form><action="/tweets" method="POST" input type="submit" value="Delete Tweet" id="delete"></input></form>
+<!-- %= @tweet.current_user %> %= Tweet.current_user %> %= Tweet.user_id %> %= Tweet.id %> %= @tweet.id %> % @tweet.id %>
