--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -14,6 +14,10 @@
 		<form action="/tweets" method="POST">
 			<p><textarea name="content" id="content" cols="30" rows="10"></textarea></p>
 			<input type="submit" value="Tweet">
+
+			<% if flash.has?(:message) %>
+			  <%= flash[:message] %>
+			<% end %>
 		</form>
 
 	<% else %>
@@ -27,12 +31,13 @@
 		<% @user.tweets.each do |tweet| %>
 			 <p><a href="/tweets/<%= tweet.id %>"><%= tweet.content %></a> <%=tweet.user.username%></p> 
 		<% end %>
+
 	<% else %>
 		<p>You haven't tweeted yet!</p>
 	<% end %>
 
 	<p><a href="/logout">Log Out</a></p>
 
-	
+	cd 
 </body>
 </html>
