fix flash messages for user views

--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -13,5 +13,9 @@
 		<p><label for="password">Password: </label><input type="password" type="password" name="password"></p>
 		<p><input type="submit" value="Sign Up"></p>
 	</form>
+
+	<% if flash.has?(:message) %>
+    	<%= flash[:message] %>
+  	<% end %>
 </body>
 </html>
