--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Fwitter - Home</title>
-</head>
-<body>
-	<h1>Welcome to Fwitter!</h1>
+<h1>Welcome to Fwitter!</h1>
 
-	<a href="/login">Login</a>
-	<a href="/signup">Sign Up</a>
-</body>
-</html>
+<p>Fwitter is a place to instantly share what's happening right now,</p>
+<p>and keep tabs on what's happening everywhere else in the world.</p>
+
+<p><a href="/signup">Sign up</a> or <a href="/login">Log in</a> to join the conversation!</p>
