--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,1 +1,5 @@
-edit_tweet.erb
+<form action="/tweets/<%= @tweet.id %>" method=POST >
+<%= @tweet.content %>
+<input type="text" name="content">
+<input type="submit" value="submit">
+</form>
