--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -8,7 +8,7 @@
         <input id="hidden" type="hidden" name="_method" value="patch">
           <label>Fweet Conent:</label>
           <input type="text" name="content" value="<%= @tweet.content %>">
-          <input type="submit" name="submit" value="submit">
+          <input type="submit" value="submit">
       </form>
   </body>
 </html>
