--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -10,11 +10,11 @@
 
     <form method="POST" action="/tweets/<%=@tweet.id%>/delete">
       <input id="hidden" type="hidden" name="_method" value="delete">
-      <input type="submit" value="submit">
+      <input type="submit" value="Delete Tweet">
     </form>
 
-    <a href="/tweets/<%=@tweet.id%>/edit">Click here if you would like to Edit the Fweet</a>
-    <a href="/tweets/new"> Tweet Again </a>
-    <a href="/tweets"> View all tweets </a>
+    <a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a><br>
+    <a href="/tweets/new"> Tweet Again </a><br>
+    <a href="/tweets"> View all tweets </a><br>
   </body>
 </html>
