--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -2,7 +2,7 @@
 <html>
 <head></head>
   <body>
-      <h1>Welcome to Fweet, go ahead and SIGN UP!!!</h1>
+      <h1>Welcome, to Fweet, go ahead and SIGN UP!!!</h1>
 
       <form method="POST" action="/signup">
           <label for="name"> Name: </label>
