--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -5,11 +5,13 @@
       <h1>Welcome,  back to Fweet, go ahead and LOG IN!!!</h1>
 
       <form method="POST" action="/login">
+          <label for="email"> Username: </label>
+          <input type="text" name="username" id="username" />
           <label for="email"> Email: </label>
           <input type="text" name="email" id="email" />
           <label for="password"> Password: </label>
           <input type="password" name="password" id="password" />
-          <input type="submit" />
+          <input type="submit" name="submit" value="submit"/>
       </form>
   </body>
 </html>
