--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,5 +1,8 @@
 <form action="/tweets/<%= @tweet.id %>/delete" method="POST">
-  <input type="submit" value="Delete Tweet" id="Delete Tweet"></input>
+  <input id="hidden" type="hidden" name="_method" value="DELETE">
+  <input type="submit" value="Delete Tweet"></input>
 </form>
+<% if @tweet %>
 <%= @tweet.content %>
+<% end %>
 <a href="/tweets/edit_tweet">Edit Tweet</a>
