--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,5 +1,6 @@
 <form action="/tweets/<%= @tweet.id %>" method=POST >
 <%= @tweet.content %>
+  <input type="submit" value="Delete Tweet"></input>
 <input type="text" name="content">
 <input type="submit" value="submit">
 </form>
