--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,6 +1,5 @@
 <form action="/tweets/<%= @tweet.id %>" method=POST >
-<%= @tweet.content %>
-  <input type="submit" value="Delete Tweet"></input>
-<input type="text" name="content">
+<input type="hidden" id="hidden" name="_method" value="patch">
+<input type="text" name="content" value="<%= @tweet.content %>">
 <input type="submit" value="submit">
 </form>
