--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,1 +1,8 @@
-<%= users/@user.slug %>
+<%= @user.slug %>
+<% @user.tweets.each do |tweet| %>
+<p><%= tweet.content %></p>
+<% end %>
+<form action="/tweets/:id/delete" method="post">
+<input type="hidden" id="hidden" name="_method" value="delete">
+<input type="submit" value="Delete Tweet">
+</form>
