--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -13,10 +13,28 @@
 		text-align: center;
 		white-space: nowrap;
 		}
-		.button--primary {
-		background-color: #1da1f2;
-    	border: 1px solid #1da1f2;
+		a {text-decoration: none;}
+		.button {
+		border: 1px solid #1da1f2;
     	color: #fff;
+    	}
+		.button--primary {
+		background-color: #1da1f2;    	
+		}
+		.button--edit {
+			background: lightgreen;
+		}
+		.button--delete {
+			background: tomato;
+		}
+		.tweet--card {
+			background: lightblue;
+			border-radius: 10px;
+			border: 1px solid lightgreen;
+			padding: 20px;
+			float: left;
+			clear: left;
+			margin-bottom: 1em;
 		}
 	</style>
 </head>
