--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -6,5 +6,5 @@
 	<label for="password">Password: </label><input type="password" name="password" id="password">
 	<br />
 
-	<input class="fwitter_button button--primary" type="submit" value="Log In">
+	<input class="fwitter_button button--primary" id="submit" type="submit" value="Log In">
 </form>
