--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -18,14 +18,20 @@
 		border: 1px solid #1da1f2;
     	color: #fff;
     	}
+    	.button--tweet {
+    		display: block;
+    		width: 50px;
+    	}
 		.button--primary {
 		background-color: #1da1f2;    	
 		}
 		.button--edit {
 			background: lightgreen;
+			float: left;
 		}
 		.button--delete {
 			background: tomato;
+			float: left;
 		}
 		.tweet--card {
 			background: lightblue;
