--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,1 +1,8 @@
-<h1>Login Page</h1>
+<h1>Welcome! Please login:</h1>
+<form action="/login" method="post">
+  <h3><input type="text" name="username" placeholder="Username"></h3>
+
+  <h3><input type="text" name="password" placeholder="Password"></h3>
+
+  <input type="text" value="Login">
+</form>
