--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -4,5 +4,5 @@
 
   <h3><input type="text" name="password" placeholder="Password"></h3>
 
-  <input type="text" value="Login">
+  <input type="submit" value="submit">
 </form>
