--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -5,6 +5,19 @@
     <title>Fwitter</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <% if logged_in? %>
+          <a href="/logout">Log Out</a>
+          <a href="/tweets/new">Create Tweet</a>
+          <h1>Welcome, <%=current_user.username%></h1>
+        <% else %>
+          <a href="/signup">Sign Up</a>
+          <a href="/login">Log In</a>
+        <% end %>
+      </nav>
+    </header>
+    <!-- create a nav bar that allows people to login or logout or signup -->
     <%=yield%>
   </body>
 </html>
