--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,1 +1,7 @@
-<h1>Show User Info</h1>
+<h1><%=current_user.username%>'s Tweets</h1>
+
+<ul>
+  <%current_user.tweets.all.each do |t|%>
+    <li><%=t.content%></li>
+  <%end%>
+</ul>
