--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,9 +8,10 @@
     <header>
       <nav>
         <% if logged_in? %>
-          <a href="/logout">Log Out</a>
+          <strong>Welcome, <%=current_user.username%>!</strong>
+          <a href="/logout">Log Out</a> |
+          <a href="/users/<%=current_user.slug%>">Your Tweets</a> |
           <a href="/tweets/new">Create Tweet</a>
-          <h1>Welcome, <%=current_user.username%></h1>
         <% else %>
           <a href="/signup">Sign Up</a>
           <a href="/login">Log In</a>
