--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,7 +7,17 @@
 </head>
 
 <body>
-  
+  <nav>
+    <ul>
+      <% if logged_in? %>
+        <a href= '/tweets'>See Your Tweets</a>
+        <a href= '/logout'>Sign Out of Fwitter</a>
+      <% else %>
+        <a href= '/signup'>Create Your Account!</a>
+        <a href= '/login'>Sign in to Your Account</a>
+      <% end %>
+    </ul>
+  </nav>
   <%= yield %>
 </body>
 </html>
