--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,1 +1,11 @@
-<h1>edit an existing tweet</h1>
+<h1>Edit Your Tweet</h1>
+
+<p><%=@tweet.content%></p>
+
+<form action="/tweets/<%=@tweet.id%>" method="post">
+  <input id="hidden" type="hidden" name="_method" value="patch">
+  <label>Update content:</label><textarea rows="5" cols="45" name="content"></textarea>
+  <br/>
+
+  <input type="submit" value="submit">
+</form>
