update views styling

--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -3,8 +3,9 @@
 <%Tweet.all.each do |t|%>
   <div>
 
-    <p><strong><%=User.find(t.user_id).username%></strong>
-      <br>
+    <p>
+      <strong><%=User.find(t.user_id).username%></strong>
+      <br/>
       <%=t.content%>
     </p>
   </div>
