still not passing tests but basic structure there

--- a/app/views/tweets/create.erb
+++ b/app/views/tweets/create.erb
@@ -3,5 +3,5 @@
 <form method= "POST" action= "/tweets">
   <label for= "create_tweet">What's On Your Mind?</label><br>
   <input type= "text" id= "tweet_content" name= "tweet_content"><br>
-  <input type= "submit" value= "Send It!">
+  <input type= "submit" value= "submit">
 </form>
