--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -9,5 +9,5 @@
   <h4><label for= "password">Password:</label></h4>
   <input type= "password" id= "password" name= "password"><br>
 
-  <input type= "submit" value= "Log In">
+  <input type= "submit" value= "submit">
 </form>
