--- a/app/views/users/create.erb
+++ b/app/views/users/create.erb
@@ -14,6 +14,6 @@
   <h4><label for= "password">Password:</label></h4>
   <input type= "password" id= "password" name= "password"><br>
 
-  <input type= "submit" value= "Create New User">
+  <input type= "submit" value= "submit">
 
 </form>
