tweeked application controller as per error, refactored tweets controller to show tweet

--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,5 +1,5 @@
 <h3>Here's what you have to say, <%= @user.username %>!</h3>
 
-<% @user.tweets.each do |t| %>
+<% @user.tweets.each do |tweet| %>
   <li><%= tweet.content %></li>
 <% end %>
