refactored the tweets views and added proper button names to pass tests

--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,6 +1,10 @@
 <h1>Welcome, <%= current_user.username %></h1>
-<% Tweet.all.each do |tweet| %>
-  <h3><a href="tweets/<%= tweet.id%>"><%= tweet.content %></a> - <a href="/users/<%= tweet.user.slug %>"><%= tweet.user.username %></a></h3>
+
+<h3>Tweets</h3>
+<% @tweets.each do |tweet| %>
+  <div>
+    <%= tweet.content %>
+  </div>
 <% end %>
 <br><br>
 <a href="/tweets/new">Create Tweet</a>
