--- a/app/views/tweets/create.erb
+++ b/app/views/tweets/create.erb
@@ -2,6 +2,6 @@
 
 <form method= "POST" action= "/tweets">
   <label for= "create_tweet">What's On Your Mind?</label><br>
-  <input type= "text" id= "tweet_content" name= "tweet_content"><br>
-  <input type= "submit" value= "submit">
+  <input type= "text" id= "content" name= "content"><br>
+  <input class= "btn btn-primary" type= "submit" value= "submit">
 </form>
