--- a/app/views/tweets/edit.erb
+++ b/app/views/tweets/edit.erb
@@ -2,6 +2,6 @@
 
 <form method= "POST" action= "/tweets/<%=@tweet.id%>">
   <input type= "hidden" id= "hidden" name= "_method" value= "PATCH">
-  <input type= "text" name= "tweet[content]" value= "<%= @tweet.content%>" id= "content">
+  <input type= "text" name= "content" value= "<%= @tweet.content%>" id= "content">
   <input type= "submit" value= "submit">
 </form>
