--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -1,6 +1,8 @@
-<%= @tweet.content %><br>
+<p><%= @tweet.content %></p><br>
 
 <form method= "POST" action= "/tweets/<%=@tweet.id%>/delete">
   <input type= "hidden" id= "hidden" name= "_method" value= "DELETE">
-  <input type= "submit" value= "submit">
+  <input type= "submit" value= "Delete Tweet">
 </form><br>
+
+<a href= "/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
