--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,4 +1,4 @@
-<h2>Login Below</h2>
+<h2>Login To Fwitter!</h2>
 
 <form method= "POST" action= "/login">
   <h4><label for= "username">Username:</label></h4>
