--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,3 +1,11 @@
+<p style="color: red">
+  <em>
+    <% if flash.has?(:message) %>
+      <%= flash[:message] %>
+    <% end %>
+  </em>
+</p>
+
 <h1>Create a new tweet</h1>
 <form action="/tweets" method="post">
   <p>Enter your new tweet below and click submit</p>
