--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,3 +1,11 @@
+<!-- <p style="color: red">
+  <em>
+    <% if flash.has?(:message) %>
+      <%= flash[:message] %>
+    <% end %>
+  </em>
+</p> -->
+
 <h1>Edit Your Tweet</h1>
 
 <p><%=@tweet.content%></p>
