--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,3 +1,10 @@
+<p style="color: red">
+  <em>
+    <% if flash.has?(:message) %>
+      <%= flash[:message] %>
+    <% end %>
+  </em>
+</p>
 <h1>What's Happening on Fwitter Today</h1>
 
 <%Tweet.all.each do |t|%>
