--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,3 +1,11 @@
+<p style="color: red">
+  <em>
+    <% if flash.has?(:message) %>
+      <%= flash[:message] %>
+    <% end %>
+  </em>
+</p>
+
 <h1>Welcome! Please login:</h1>
 <form action="/login" method="post">
   <h3><input type="text" name="username" placeholder="Username"></h3>
