--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,24 @@
+header {
+  padding: 10px;
+}
+
+body {
+  padding: 10px;
+}
+
+.button {
+    background-color: #00BCE1;
+    border: none;
+    color: white;
+    padding: 5px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    margin: 4px 2px;
+    /*cursor: pointer;*/
+}
+
 #navbar {
   position: fixed;
   top: 0;
@@ -24,21 +45,4 @@
   border-right: 1px solid #00BCE1;
   text-decoration: none;
   font: 1em "Trebuchet MS", Arial, sans-serif;
-}
-
-header {
-  padding: 10px;
-}
-
-.button {
-    background-color: #00BCE1;
-    border: none;
-    color: white;
-    padding: 5px 10px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 14px;
-    margin: 4px 2px;
-    /*cursor: pointer;*/
 }
