--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -19,7 +19,13 @@
         <% end %>
       </div>
     </header>
-    <!-- create a nav bar that allows people to login or logout or signup -->
+    <p style="color: red">
+      <em>
+        <% if flash.has?(:message) %>
+          <%= flash[:message] %>
+        <% end %>
+      </em>
+    </p>
     <%=yield%>
   </body>
 </html>
