--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,10 +1,10 @@
-<p style="color: red">
+<!-- <p style="color: red">
   <em>
     <% if flash.has?(:message) %>
       <%= flash[:message] %>
     <% end %>
   </em>
-</p>
+</p> -->
 
 <h3>Your Tweet</h3>
 
