--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,10 +1,10 @@
-<p style="color: red">
+<!-- <p style="color: red">
   <em>
     <% if flash.has?(:message) %>
       <%= flash[:message] %>
     <% end %>
   </em>
-</p>
+</p> -->
 
 <h1>Welcome! Please login:</h1>
 <form action="/login" method="post">
