TBD: Signup, Login, Logout page

--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -1,1 +1,7 @@
 <p>Welcome, <%= @user.username%>!<p>
+
+<% @tweets.all.each do |tweet| %>
+  <div>
+    <p><%= tweet.content %> </p>
+  </div>
+<% end %>
