--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,3 @@
-<h1>Fwitter</h1>
-
-<a href="/registration">Register</a>
-<a href="/sessions/login">Login</a>
+<h1>Welcome to Fwitter</h1>
+<p><a href="/login">Log In</a></p>
+<p><a href="/singup">Sign Up</a></p>
