--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -2,5 +2,5 @@
 <form action="/login" method="POST">
   Username: <input type="text" name="username"><br>
   Password: <input type="password" name="password"><br>
-  <input type="submit" value="Submit">
+  <input type="submit" value="submit">
 </form>
