--- a/app/views/tweets/edit.erb
+++ b/app/views/tweets/edit.erb
@@ -1,5 +1,5 @@
 <form method="post" action="/tweets/<%=@tweet.user_id%>">
   <input id="hidden" type="hidden" name="_method" value="patch">
-  Content: <input type="text" value="<%=@tweet.content%>" name="content">
+  Content: <input type="text" placeholder="<%=@tweet.content%>" name="content">
   <input type="submit" value="submit">
 </form>
