--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -5,6 +5,15 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.css">
   </head>
 
+  <nav>
+    <a href="/">Homepage</a> |
+    <a href="/signup">Sign Up</a> |
+    <a href="/login">Login</a> |
+    <a href="/tweets">Tweets</a> |
+    <a href="/logout">Sign Out</a> |
+    <a href="/logout">Sign Out</a> |
+  </nav>
+
   <body>
     <div class="container">
       <%= yield %>
