--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -5,3 +5,7 @@
     <p><%= tweet.content %> </p>
   </div>
 <% end %>
+
+<form action="/tweets/new">
+  <input class="button" value="New Tweet" type="submit">
+</form>
