--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -2,5 +2,5 @@
 <form action="login" method="post">
   <p><input type="text" name="username" placeholder="Username"></p>
   <p><input type="text" name="password" placeholder="Password"></p>
-  <input type="submit" value="Submit">
+  <input type="submit" value="submit">
 </form>
