--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,3 +1,8 @@
 <h1>Fweets</h1>
-<h2>Welcome, </h2>
-<a href="/logout">Log Out</a>
+<% if logged_in? %>
+  <h2><%= "Welcome, #{current_user.username}" %></h2>
+  <% @tweets.each do |tweet| %>
+    <li><%= tweet.content %></li>
+  <% end %>
+  <a href="/logout">Log Out</a>
+<% end %>
