--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,5 @@
-<h2>Welcome to Fwitter</h2>
+<div class="main">
+  <h2>Welcome to Fwitter</h2> <br>
 
-<a href="/signup">Signup</a> <br></br>
-<a href="/login">Login</a>
+  <u><a href="/signup">Signup</a></u> &nbsp;&nbsp; | &nbsp;&nbsp; <u><a href="/login">Login</a></u>
+</div>
