--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,7 +1,11 @@
-<h1>Login to Fwitter</h1>
+<div class="main">
+  <h2>Login to Fwitter</h2> <br>
 
-<form action="/login" method="POST">
-  Username: <input type="text" name="username" placeholder="Enter Username"><br></br>
-  Password: <input type="text" name="password" placeholder="Enter Password"><br></br>
-  <input type="submit" value="submit">
-</form>
+  <form action="/login" method="POST">
+    Username: &nbsp;<input type="text" name="username" placeholder="Enter Username"><br></br>
+    Password: &nbsp;<input type="text" name="password" placeholder="Enter Password"><br></br>
+    <input type="submit" value="submit">
+  </form> <br></br><br>
+
+  Not yet a user? &nbsp;<u><a href="/signup">Sign Up</u>
+</div>
