--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,2 +1,4 @@
 <h1>Fweet # <%= @tweet.id %></h1>
 <p><%= @tweet.content %></p>
+<a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
+<a href="/tweets/<%= @tweet.id %>/delete">Delete Tweet</a>
