--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,4 +1,7 @@
 <h1>Fweet # <%= @tweet.id %></h1>
-<p><%= @tweet.content %></p>
-<a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
-<a href="/tweets/<%= @tweet.id %>/delete">Delete Tweet</a>
+<%= @tweet.content %> <a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
+<br></br>
+<form action="/tweets/<%= @tweet.id %>/delete" method="post">
+  <input id="hidden" type="hidden" name="_method" value="delete">
+  <input type="submit" value="Delete Tweet">
+</form>
