--- a/app/views/invalid-signup.erb
+++ b/app/views/invalid-signup.erb
@@ -7,8 +7,12 @@
     Email: &nbsp;<input type="text" name="email" placeholder="Create Email" autocomplete="off"><br></br>
     Password: &nbsp;<input type="text" name="password" placeholder="Create Password" autocomplete="off"><br></br>
     <input type="submit" value="Sign Up">
-  </form> <br></br><br>
+  </form> <br></br>
 
+  <div class="invalid">
+    Username or email account already exists.<br>
+  </div>
+  <br></br><br>
 
   Already a user? &nbsp;<u><a href="/login">Log In</u>
 </div>
