--- a/app/views/invalid-login.erb
+++ b/app/views/invalid-login.erb
@@ -5,7 +5,13 @@
     Username: &nbsp;<input type="text" name="username" placeholder="Enter Username" autocomplete="off"><br></br>
     Password: &nbsp;<input type="text" name="password" placeholder="Enter Password" autocomplete="off"><br></br>
     <input type="submit" value="submit">
-  </form> <br></br><br>
+  </form> <br> </br>
+
+  <div class="invalid">
+    Invalid username or password.<br>
+    Please try again.
+  </div>
+  <br></br><br>
 
   Not yet a user? &nbsp;<u><a href="/signup">Sign Up</u>
 </div>
