--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -32,7 +32,7 @@
   </head>
   <body>
     <%if @user%>
-      <h1>Currently logged in as: <%=@user.username%></h1>
+      <h1>Welcome, <%=@user.username%></h1>
       <a href="/logout">Logout</a>
     <%end%>
 
