--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,4 +1,4 @@
-<form action="/tweets" method="post">
+<form action="/signup" method="post">
   <label>Username: </label>
   <input type="text" name="username">
   <br>
