--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -13,5 +13,5 @@
     <input type="password" name='password' value='bob'>
 
     </br>
-    <input type="submit" value="Login">
+    <input type="submit" value="submit">
 </form>
