--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -33,7 +33,12 @@
   <body>
     <%if @user%>
       <h1>Welcome, <%=@user.username%></h1>
+</br>
       <a href="/logout">Logout</a>
+</br>
+      <a href="/users/<%=@user.slug%>">My tweets</a>
+    </br>
+      <a href="/tweets/new">Make new tweet</a>
     <%end%>
 
     <%= yield %>
