--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,6 +1,8 @@
 <h1>Fweet # <%= @tweet.id %></h1>
 <%= @tweet.content %> <a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
 <br></br>
+<a href="/users/<%= current_user.slug %>">Back to User</a>
+<br></br>
 <form action="/tweets/<%= @tweet.id %>/delete" method="post">
   <input id="hidden" type="hidden" name="_method" value="delete">
   <input type="submit" value="Delete Tweet">
