--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,4 +1,7 @@
 <h1><%= @user.username %></h1>
 <% @user.tweets.each do |tweet| %>
-  <li><%= tweet.content %></li>
+  <li><a href="/tweets/<%= tweet.id %>"><%= tweet.content %></a></li>
 <% end %>
+
+<p><a href="/tweets/new">Create New Tweet</a></p>
+<p><a href="/tweets">Back to Tweets Main Page</a></p>
