--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -1,2 +1,12 @@
-<%= @user.username %>
-<%= @user.email %>
+<h1>Welcome, <%= @user.username %></h1>
+<ul>
+  <% @user.tweets.each do |tweet| %>
+    <li><%= tweet.content %></li>
+  <% end %>
+</ul>
+
+<p>
+  <a href="/logout">
+    Log Out
+  </a>
+</p>
