--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -6,5 +6,5 @@
   <label>Password: </label>
   <input type="text" name="password">
   <br>
-  <input type="submit" value="Log In">
+  <input type="submit" name="submit" value="submit">
 </form>
