issues with routes updating

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -5,7 +5,7 @@
   And watch events unfold, in real time, from every angle.</h2>
 
 <h3>Already a member?</h3>
-  <a href="/login">Log In</a><br>
+  <a href="/users/login">Login</a><br>
 
 <h3>Need to signup? No problem</h3>
-  <a href="/signup">Sign Up</a><br>
+  <a href="/users/signup">Sign Up</a><br>
