--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -1,4 +1,4 @@
-<h2>Welcome, <%= current_user.username.capitalize %></h2>
+<h2>Welcome,  you </h2>
 <h3>Twitter Feed</h3>
 <%= @tweets.each do |tweet| %>
 <div>
