--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -2,5 +2,5 @@
 <form action="/tweets" method="post">
   <label>Tweet:</label>
   <input type="text" name="content">
-  <input type="submit" name="submit" value="submit">
+  <input type="submit" value="submit">
 </form>
