--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,7 +1,14 @@
-<h3>Sign Up</h3>
-<form action="/signup" method="post">
-<label>Username:</label> <input type="text" name="username" id="username"><br>
-<label>Email:</label> <input type="text" name="email"><br>
-<label>Password:</label> <input type="text" name="password"><br>
-  <input type="submit" name="submit" value="submit">
-</form>
+<h1>Join Fwitter today.</h1>
+
+ <form method="post" action="/signup">
+ 	<label for="username">Username: <label><input type="username" name="username" id="username" value="Johnny Appleseed">
+ 	<br />
+
+ 	<label for="email">Email: <label><input type="email" name="email" id="email" value="johnnyappleseed@1800.com">
+ 	<br />
+
+ 	<label for="password">Password: <label><input type="password" name="password" id="password">
+ 	<br />
+
+ 	<input type="submit" value="Sign Up">
+ </form> 
