fixed edit and delete routes

--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -2,7 +2,7 @@
 
 <h2> <%= @tweet.content%> </h2>
 
-<form action = "/tweets/<%=@tweet.id%>/edit" method = "POST">
+<form action = "/tweets/<%=@tweet.id%>/edit" method = "GET">
   <input name = "_method" type = "hidden" value = "PATCH">
   <input type = "submit" value = "Edit Tweet">
 </form>
