--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,6 +1,18 @@
 <h3>Sign Up</h3>
+
 <form action="/signup" method="POST">
-  <input type="text" name="username" placeholder="Username:">
-  <input type="password" name="password" placeholder="Password:">
+
+  Username: <input type="text" name="username" placeholder="Username:">
+
+  <br>
+
+  Email: <input type="text" name="email" placeholder="Email:">
+
+  <br>
+
+  Password: <input type="password" name="password" placeholder="Password:">
+
+  <br>
+
   <input type="submit" value="Sign Up">
 </form>
