--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -5,6 +5,6 @@
   Username: <input type="text" name="username" placeholder="Username:">
 
   Password: <input type="password" name="password" placeholder="Password:">
-  
-  <input type="submit" value="Log In">
+
+  <input type="submit" value="submit">
 </form>
