User can view ALL of thier specific tweets on their homepage. Created'show_tweets' form to make this possible

--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -4,14 +4,12 @@
   <%= flash[:message] %>
 <% end %>
 
-<h3>Current Balance</h3>
+<h3>Tweets</h3>
 
   <p>
-    <label for=balance><%= @user.balance %></label>
+    <% @user.tweets.each do |tweet| %>
+      <li><%= tweet.content %></li>
+    <% end %>
   </p>
 
-  <p>
-    <a href="/deposit">Deposit</a> <a href="/withdrawal">Withdrawal</a>
-  </p>
-  <p>We are currently working on your account.</p>
 <p><a href="/logout">Log Out</a></p>
