--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,6 +1,8 @@
-<h3>Sign Up</h3>
-<form action="/signup" method="POST">
-  <input type="text" name="username" placeholder="Username:">
-  <input type="password" name="password" placeholder="Password:">
-  <input type="submit" value="Sign Up">
+<h3>Tweet!</h3>
+
+<form action="/tweets" method="POST">
+
+  Content: <input type="text" name="content">
+
+  <input type="submit" value="submit">
 </form>
