--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,15 +1,14 @@
-<h1>Welcome <%= @user.username %></h1>
+<h1>Welcome</h1>
 
 <% if flash.has?(:message) %>
   <%= flash[:message] %>
 <% end %>
 
-<h3>Tweets</h3>
+<h3><li><%= @tweet.content %></li></h3>
 
-  <p>
-    <% @user.tweets.each do |tweet| %>
-      <li><%= tweet.content %></li>
-    <% end %>
-  </p>
+<form action="tweets/<%= @tweet.id %>/delete" method="post">
+  <input type="hidden" id="hidden" name="_method" value="delete">
+  <input type="submit" value="Delete Tweet">
+</form>
 
-<p><a href="/logout">Log Out</a></p>
+<p><a href="tweets/<%= @tweet.id %>/edit">Edit Tweet</a></p>
