--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -6,9 +6,9 @@
 
 <h3><li><%= @tweet.content %></li></h3>
 
-<form action="tweets/<%= @tweet.id %>/delete" method="post">
+<form action="/tweets/<%= @tweet.id %>/delete" method="post">
   <input type="hidden" id="hidden" name="_method" value="delete">
   <input type="submit" value="Delete Tweet">
 </form>
 
-<p><a href="tweets/<%= @tweet.id %>/edit">Edit Tweet</a></p>
+<p><a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a></p>
