--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -7,7 +7,7 @@
   <input type = "submit" value = "Edit Tweet">
 </form>
 
-<form action = "/tweets/<%=@tweet.id%>/delete" method = "POST">
-  <input name="_method" type="hidden" value="delete">
+<form action = "/tweets/<%=@tweet.id%>/delete" method = "GET">
+  <input name="_method" type="hidden" value="DELETE">
   <input type="submit" value="Delete Tweet">
 </form>
