--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -1,13 +1,18 @@
-<h1>Welcome, <%= @user.username %></h1>
+<h1>Welcome, @<%= @user.username %></h1>
 
 <p>
   <a href="/tweets/new">New Tweet</a>
 </p>
+<p>
+  <a href="/users/<%= @user.slug %>">View all of your tweets</a>
+</p>
 
 <% @tweets.each do |tweet| %>
-  <a href="/tweets/<%= tweet.id %>">
-    <%= tweet.content %>
-  </a><br />
+  <a href="/tweets/<%= tweet.id %>"><%= tweet.content %></a>
+  <% if !!tweet.user %>
+      --  <a href="/users/<%= tweet.user.slug %>"><%= tweet.user.username %></a>
+  <% end %>
+  <br />
 <% end %>
 <p>
   <a href="/logout">Logout</a>
