--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -7,12 +7,11 @@
   </p>
 <% end %>
 
-<% if @tweet.user == @user %>
-  <a href="/tweets/<%= @tweet.id %>/edit"><button>Edit Tweet</button></a><br /><br />
+  <a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a><br /><br />
   <form method="post" action="/tweets/<%= @tweet.id %>/delete">
-    <button type="submit">Delete Tweet</button>
+    <!--<input id="hidden" type="hidden" name="_method" value="DELETE" />-->
+    <input type="submit" value="Delete Tweet" id="Delete Tweet" />
   </form>
-<% end %>
 
 <p>
   <a href="/tweets">Home</a>
