working on layout

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -22,11 +22,11 @@
 		        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
 		        <label for="inputPassword" class="sr-only">Password</label>
 		        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-		        <button class="btn btn-md btn-secondary btn-block" type="submit">Sign in</button>
+		        <button class="btn btn-md btn-primary btn-block" type="submit">Sign in</button>
 		      </form>
 	      <br>
 	      <h4 class="form-signin-heading">Don't have an account?</h4>
-				<form action=""><button class="btn btn-md btn-default btn-block" type="submit">Create Account</button></form>
+				<form method="get" action="/signup"><button class="btn btn-md btn-default btn-block" type="submit">Create Account</button></form>
 				<br>
 				</div>
 			</div>
