--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -34,3 +34,37 @@
     top: 0;
     text-align: center;
 }
+
+.roundify {
+  border-radius: 25px;
+  margin:0 auto;
+}
+
+.navbtn{
+      margin-top: 7px;
+    }
+
+
+.gi-2x {
+  font-size: 1.2em;
+}
+
+.gi-3x {
+  font-size: 3em;
+}
+
+.gi-4x {
+  font-size: 4em;
+}
+
+.gi-5x {
+  font-size: 5em;
+}
+
+.padding-right {
+  padding-right: 14em;
+}
+
+.left-divider {
+  padding-right: 1em;
+}
