--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -3,6 +3,9 @@
   <head>
     <title>Fwitter</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    
+    
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/custom.css">
   </head>
