--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,1 +1,31 @@
-tweets.erb
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand navbar-center" href="/">fwitter</a>
+    </div>
+    <div  class="padding-right">
+    <ul class="nav navbar-nav navbar-right">
+    	<li class="left-divider"><a href=""><span class="glyphicon glyphicon-user gi-2x"></span></a></li>
+
+    	<li><form><button class="btn btn-md btn-info btn-block roundify navbtn" type="submit">fweet</button></form></li>
+    </ul>
+    </div>
+  </div>
+</nav>
+
+<div class="container">
+
+	<div class="row"> 
+  <div class="col-md-3">
+     <div class="col-md-12 boxy">
+        Some Content.. 
+     </div>
+  </div>
+  <div class="col-md-3">
+     <div class="col-md-12 boxy">
+        Some Second Content.. 
+     </div>
+  </div>
+	</div>
+	<!-- end of row -->
+</div>
