--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,1 +1,32 @@
-create_user.erb
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand navbar-center" href="/">fwitter</a>
+    </div>
+    <ul class="nav navbar-nav navbar-right">
+    	<li><a href="/login">Have an account? <strong>Sign in.</strong></a></li>
+    </ul>
+  </div>
+</nav>
+
+<div class="container">
+	<div class="vertical-tweak">
+			<div class="row">
+				<div class="col-md-10 col-md-offset-7">
+					<br>
+					<form>
+						<h3><strong>Join Fwitter Today.</strong></h3>
+						<br>
+						<input placeholder="Full Name" class="form-control" type="" name="">
+						<br>
+						<input placeholder="Email" class="form-control" type="" name="">
+						<br>
+						<input placeholder="Password" class="form-control" type="" name="">
+						<br>
+						<button class="btn btn-md btn-primary btn-block roundify"  type="submit"> Create Account</button>
+					</form>
+					<br>
+				</div>
+			</div>
+	</div>
+</div>
