work in progress

--- a/app/views/tweets/tweet-layout.erb
+++ b/app/views/tweets/tweet-layout.erb
@@ -19,9 +19,7 @@
 
 	  <div class="col-md-3">
 	     <div class="col-md-12 boxy">
-	        <h4><%=@user.email%></h4>
-	        <h5>@<%=@user.username%></h5>
-	        <p>Tweets: <%= @user.tweets.size%></p>
+	        Some Content.. 
 	     </div>
 	  </div>
 
