--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -14,14 +14,14 @@
 			<div class="row">
 				<div class="col-md-10 col-md-offset-7">
 					<br>
-					<form>
+					<form action="/signup" method="post">
 						<h3><strong>Join Fwitter Today.</strong></h3>
 						<br>
-						<input placeholder="Full Name" class="form-control" type="" name="">
+						<input placeholder="Accunt Name" required class="form-control" type="text" name="username">
 						<br>
-						<input placeholder="Email" class="form-control" type="" name="">
+						<input placeholder="Email" required class="form-control" type="text" name="email">
 						<br>
-						<input placeholder="Password" class="form-control" type="" name="">
+						<input placeholder="Password" required class="form-control" type="password" name="password">
 						<br>
 						<button class="btn btn-md btn-primary btn-block roundify"  type="submit"> Create Account</button>
 					</form>
