--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -14,11 +14,11 @@
 			<div class="row">
 				<div class="col-md-10 col-md-offset-7">
 					<br>
-					<form>
+					<form action="/login" method="post">
 						<h3><strong>Please Sign in.</strong></h3>
-						<input placeholder="Email" class="form-control" type="" name="">
+						<input placeholder="Account Name" class="form-control" type="text" name="user_name">
 						<br>
-						<input placeholder="Password" class="form-control" type="" name="">
+						<input placeholder="Password" class="form-control" type="password" name="user_pass">
 						<br>
 						<button class="btn btn-md btn-primary btn-block roundify"  type="submit"> Create Account</button>
 					</form>
