hammering away at the red stuff

--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,3 +1,4 @@
+<body class="background-color">
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -5,9 +6,9 @@
     </div>
     <div  class="padding-right">
     <ul class="nav navbar-nav navbar-right">
-    	<li class="left-divider"><a href=""><span class="glyphicon glyphicon-user gi-2x"></span></a></li>
+    	<li class="left-divider"><a href="/logout"><span class="glyphicon glyphicon-log-out gi-2x"></span></a></li>
 
-    	<li><form><button class="btn btn-md btn-info btn-block roundify navbtn" type="submit">fweet</button></form></li>
+    	<li><form><button class="btn btn-md btn-info btn-block roundify navbtn" type="submit"><strong>fweet</strong></button></form></li>
     </ul>
     </div>
   </div>
@@ -18,23 +19,56 @@
 	<div class="row"> 
 
 	  <div class="col-md-3">
-	     <div class="col-md-12 boxy">
+	     <div class="col-md-12 content-box">
 	        <h4>@<%=@user.username%></h4>
-	        <p>Tweets: <%= @user.tweets.size%></p>
+	        <p>Fweets: <%= @user.tweets.size%></p>
 	     </div>
 	  </div>
 
 	  	<div class="col-md-6">
-	     <div class="col-md-12 boxy">
-	        Some Content.. 
-	     </div>
+	  	<div class="col-md-12 content-box">
+		  	<div>
+			  	<form method="post" action="/tweets/new">
+			  		<div class=" col-md-12 small-spacer"></div>
+			  		<textarea class="form-control" name="tweet_content" id="textarea" maxlength="99" rows="3"></textarea>
+			  		<div class=" col-md-12 small-spacer"></div>
+			  		<div class="pull-left" id="textarea_feedback"></div>
+			        <button class="btn btn-sm pull-right btn-info roundify" type="submit"><strong>fweet</strong></button>
+			    	<div class=" col-md-12 small-spacer"><br></div>
+			    </form>
+			</div>
+	  	</div>
+	  	<div class=" col-xs-12 spacer"></div>	
+	     	<br>
+	     	<%tweets =  @user.tweets.all.sort_by{|tweet|tweet.created_at}.reverse%>
+	        <% tweets.each do |tweet|%>
+	        	<div class="col-md-12 content-box"> 
+	        		<h6><%="@#{tweet.user.username} - #{tweet.created_at.localtime}"%></h6>
+	        		<br>
+	        		<p><%=tweet.content%></p>
+	        	</div>
+	        	<div class="col-xs-12 xs-spacer"></div>
+	        <% end %>
+	        <br>
 	  </div>
 
 	  <div class="col-md-3">
-	     <div class="col-md-12 boxy">
-	        Some Second Content.. 
+	     <div class="col-md-12 content-box">
+	        <h4><strong>Who to Follow</strong></h4>
+	        <%User.all.each do |user|%>
+	        	<%next if user.id == @user.id%>
+	        	<div class="row bottom-border">
+		        	<div class="col-sm-2"><a href="#" class="profile-btn btn btn-default btn-circle"><span class="glyphicon glyphicon-user gi-2x"></span></a></div>
+		        	<div class="col-sm-8 pull-right">
+		        		<h6><%="@#{user.username}"%></h6>
+		        		<button class="btn btn-sm btn-primary roundify pull-left" type="submit"><strong>follow</strong></button>
+		        		<div class=" col-md-12 small-spacer"></div>
+		        	</div>
+	        	</div>
+	        <%end%>
 	     </div>
 	  </div>
 	</div>
 	<!-- end of row -->
 </div>
+</body>
