--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -17,7 +17,7 @@
 					<form action="/signup" method="post">
 						<h3><strong>Join Fwitter Today.</strong></h3>
 						<br>
-						<input placeholder="Accunt Name" required class="form-control" type="text" name="username">
+						<input placeholder="Account Name" required class="form-control" type="text" name="username">
 						<br>
 						<input placeholder="Email" required class="form-control" type="text" name="email">
 						<br>
