--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,6 +8,7 @@
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/custom.css">
+     <script src="/javascripts/script.js"></script> 
   </head>
 
   <body>
